--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -116,6 +116,7 @@ runs:
     - name: Fail the job
 #      if: ${{ steps.wait-pc-node.outcome == 'failure' }}
       run: exit 1
+      shell: bash
     - name: Run smoke tests
       uses: ./.github/actions/tests/run-e2e-tests
       with:
