--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -83,22 +83,28 @@ runs:
         pip install -r requirements.txt
         cd ..
       shell: bash
-    - name: Wait for the PC node 1 to start
+    - name: Wait for partner-chains-node-1 to start
       id: wait-pc-node
       continue-on-error: true
       run: |
+        # Wait for the Cardano node to be ready
         while ! docker exec cardano-node-1 [ -e /shared/cardano.ready ]; do sleep 1; done
         echo "Cardano network is ready! Waiting for Partner Chain first node to start..."
         INIT_TIMESTAMP=$(docker exec cardano-node-1 cat /shared/cardano.start)
         echo "INIT_TIMESTAMP=$INIT_TIMESTAMP" >> $GITHUB_ENV
-        while ! docker exec partner-chains-node-1 [ -e /shared/partner-chains-node-1.ready ]; do \
-          epoch=$(docker exec cardano-node-1 cardano-cli query tip --testnet-magic 42 | jq -r .epoch) && \
-          echo "Epoch: $epoch" && \
-          sleep 10; \
+        epoch=0
+        while ! docker exec partner-chains-node-1 [ -e /shared/partner-chains-node-1.ready ]; do
+          epoch=$(docker exec cardano-node-1 cardano-cli query tip --testnet-magic 42 | jq -r .epoch)
+          echo "Epoch: $epoch"
+          if [ "$epoch" -ge 3 ]; then
+            echo "MC has reached epoch 3 and partner-chains-node-1 is still not ready. Failing test and gathering logs."
+            exit 1
+          fi
+          sleep 10
         done
-      shell: bash 
+      shell: bash
     - name: Collect and zip Docker logs
-#      if: ${{ steps.wait-pc-node.outcome == 'failure' }}
+      if: ${{ steps.wait-pc-node.outcome == 'failure' }}
       run: |
         mkdir -p docker_logs
         docker ps -a --format '{{.Names}}' | while read line; do
@@ -108,13 +114,13 @@ runs:
         zip -r docker_logs.zip docker_logs/
       shell: bash
     - name: Upload Docker logs artifact
-#      if: ${{ steps.wait-pc-node.outcome == 'failure' }}
+      if: ${{ steps.wait-pc-node.outcome == 'failure' }}
       uses: actions/upload-artifact@v4
       with:
         name: docker_logs
         path: docker_logs.zip
     - name: Fail the job
-#      if: ${{ steps.wait-pc-node.outcome == 'failure' }}
+      if: ${{ steps.wait-pc-node.outcome == 'failure' }}
       run: exit 1
       shell: bash
     - name: Run smoke tests
