--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -162,22 +162,22 @@ runs:
         mc_epoch: 3
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
-    - name: Collect and zip Docker logs
+    - name: Collect and zip container logs
       if: always()
       run: |
-        mkdir -p docker_logs
+        mkdir -p local_environment_logs
         docker ps -a --format '{{.Names}}' | while read line; do
           echo "Collecting logs for container $line"
-          docker logs "$line" > "docker_logs/$line.log" 2>&1 || true
+          docker logs "$line" > "local_environment_logs/$line.log" 2>&1 || true
         done
-        zip -r docker_logs.zip docker_logs/
+        zip -r local_environment_logs.zip local_environment_logs/
       shell: bash
-    - name: Upload Docker logs artifact
+    - name: Upload container logs
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: docker_logs
-        path: docker_logs.zip
+        name: local_environment_logs
+        path: local_environment_logs.zip
     - name: Stop partner-chains-demo
       run: |
         cd dev/local-environment
