feature/e2e-tests change runner to eks

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -41,7 +41,7 @@ jobs:
       contents: read
 
 
-    runs-on: [self-hosted, eks]
+    runs-on: eks
 
     if: github.event.pull_request.draft == false
 
