--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -82,11 +82,17 @@ jobs:
       run: |
         echo "REPORT_TO_XRAY=$([[ '${{ github.event_name }}' == 'schedule' || -n '${{ github.event.inputs.plan }}' || -n '${{ github.event.inputs.execution }}' ]] && echo true || echo false )" >> $GITHUB_ENV
 
-    - name: Setup Earthly
-      uses: ./.github/earthly-setup
+    # - name: Setup Earthly
+    #   uses: ./.github/earthly-setup
+    #   with:
+    #     ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
+    #     config_tar: ${{ secrets.EARTHLY_TAR }}
+    - name: install earthly
+      uses: earthly/actions-setup@v1
       with:
-        ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-        config_tar: ${{ secrets.EARTHLY_TAR }}
+        github-token: ${{ github.token }}
+        use-cache: true
+        version: ^0.7.0
 
     - name: run
       env:
@@ -108,7 +114,6 @@ jobs:
       run: |
         cd E2E-tests
         earthly \
-          --no-satellite \
           --secret AWS_SESSION_TOKEN="$AWS_SESSION_TOKEN" \
           --secret AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID" \
           --secret AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY" \
