--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -37,7 +37,7 @@ jobs:
       id-token: write
       contents: read
 
-    runs-on: [self-hosted, eks]
+    runs-on: eks
 
     if: github.event.pull_request.draft == false
 
@@ -59,7 +59,7 @@ jobs:
     - name: checkout code
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref_name || 'master' }}
+        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref_name || 'feature/e2e-tests' }}
 
     - name: Set deployment_version as env variable
       run: echo "DEPLOYMENT_VERSION=$(jq -r .deployment_version ./config/substrate/devnet_nodes.json)" >> $GITHUB_ENV
@@ -78,11 +78,12 @@ jobs:
       run: |
         echo "REPORT_TO_XRAY=$([[ '${{ github.event_name }}' == 'schedule' || -n '${{ github.event.inputs.plan }}' || -n '${{ github.event.inputs.execution }}' ]] && echo true || echo false )" >> $GITHUB_ENV
 
-    - name: Setup Earthly
-      uses: ./.github/earthly-setup
+    - name: install earthly
+      uses: earthly/actions-setup@v1
       with:
-        ssh_key: ${{ secrets.SUBSTRATE_REPO_SSH_KEY }}
-        config_tar: ${{ secrets.EARTHLY_TAR }}
+        github-token: ${{ github.token }}
+        use-cache: true
+        version: ^0.7.0
 
     - name: run
       env:
