--- a/.github/workflows/devnet.yml
+++ b/.github/workflows/devnet.yml
@@ -3,9 +3,6 @@ name: Devnet Partner Chains Tests
 on:
   schedule:
     - cron:  '30 4 * * *'
-  push:
-    branches:
-      - feature/e2e-tests
   workflow_dispatch:
     inputs:
       keyword:
@@ -62,7 +59,7 @@ jobs:
     - name: checkout code
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref_name || 'feature/e2e-tests' }}
+        ref: ${{ github.event_name == 'workflow_dispatch' && github.ref_name || 'master' }}
 
     - name: Set deployment_version as env variable
       run: echo "DEPLOYMENT_VERSION=$(jq -r .deployment_version ./config/substrate/devnet_nodes.json)" >> $GITHUB_ENV
