--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,7 @@ jobs:
   argocd-tests:
     if: github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.pull_request.merged == false)
     needs: [build, deploy-argocd]
-    runs-on: [self-hosted, eks]
+    runs-on: eks
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -204,7 +204,7 @@ jobs:
   upload-chain-specs:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true
     needs: build
-    runs-on: [self-hosted, eks]
+    runs-on: eks
     steps:
       - name: Checkout
         uses: actions/checkout@v4
