revert Cargo.toml reformatting

--- a/utils/ogmios-client/Cargo.toml
+++ b/utils/ogmios-client/Cargo.toml
@@ -7,21 +7,11 @@ edition = "2021"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-fraction = { workspace = true, features = [
-    "with-decimal",
-    "with-serde-support",
-] }
+fraction = { workspace = true, features = ["with-decimal", "with-serde-support"] }
 hex = { workspace = true }
-jsonrpsee = { workspace = true, optional = true, features = [
-    "client-core",
-    "http-client",
-    "macros",
-] }
+jsonrpsee = { workspace = true, optional = true, features = ["client-core", "http-client", "macros"] }
 serde = { workspace = true }
-serde_json = { workspace = true, features = [
-    "raw_value",
-    "arbitrary_precision",
-] }
+serde_json = { workspace = true, features = ["raw_value", "arbitrary_precision"] }
 thiserror = { workspace = true }
 time = { workspace = true, features = ["std", "serde", "parsing"] }
 
