feat: add conversions from ogmios-client to CSL types needed for the offchain smart contracts code

--- a/toolkit/offchain/Cargo.toml
+++ b/toolkit/offchain/Cargo.toml
@@ -16,6 +16,7 @@ cardano-serialization-lib = { workspace = true }
 cbor_event = { workspace = true }
 chain-params = { workspace = true, features = ["std"] }
 db-sync-follower = { workspace = true, features = ["candidate-source"] }
+fraction = { workspace = true }
 hex = { workspace = true }
 hex-literal = { workspace = true }
 jsonrpsee = { workspace = true, features = ["client-core", "http-client", "macros"] }
