--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -193,6 +193,15 @@ runs:
         mc_epoch: 3
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
+    - name: Check if no skipped tests
+      if: ${{ inputs.tests == 'postmerge' }}
+      run: |
+        skipped=$(jq -r .summary.skipped e2e-tests/.report.json)
+        if [ "$skipped" != "null" ]; then
+          echo "Skipped tests found: $skipped. Check test logs for more information."
+          exit 1
+        fi
+      shell: bash
     - name: Collect and zip container logs
       if: always()
       run: |
